add some features

--- a/Pricing.html
+++ b/Pricing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pricing | Modern Treasury</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -46,7 +46,7 @@
             </div>
             <button class="rounded-lg px-8 py-1 text-white text-xl">log in</button>
         </div>
-        <div class="flex my-4 mx-6 bg-white   justify-between">
+        <div class="flex py-4 px-6 bg-white   justify-between w-full">
             <nav class="border-gray-200">
                 <div class="container mx-auto flex flex-wrap gap-x-3 items-center">
                     <a href="/index.html" class="flex">
@@ -134,7 +134,7 @@
                     </p>
                 </div>
             </div>
-            <div class="bg-[#C4E0F4] flex flex-col justify-center items-center px-10 gap-8 mt-16 py-16">
+            <div class="bg-[#C4E0F4] flex flex-col justify-center items-center px-4 gap-8 mt-16 py-16">
                 <h1 class="font-semibold text-center text-2xl lg:text-5xl">Comprehensive plans for enterprises</h1>
                 <p class="font-normal text-center text-2xl">Pricing designed for scale.</p>
                 <a href="/contact.html"><button class="mt-4 text-center bg-blue-400  rounded-md text-xl  text-white font-semibold px-6 py-4 text-nowrap">
@@ -152,46 +152,46 @@
             </div>
             <div class="flex flex-col justify-center items-start gap-16 mt-16  md:flex-row">
                 <div class="max-w-md">
-                    <img src="/Images/Grade Security.png" alt="">
+                    <img src="/Images/Pricing page images/bank payments API.png" alt="">
                     <h1 class="mt-5 font-semibold text-xl lg:text-2xl">Bank payments API</h1>
                     <p class="mt-4 text-lg lg:text-xl  text-slate-700">Programmatic money movement in 12+ rails and 50+
                         currencies.</p>
                 </div>
                 <div class="max-w-md">
-                    <img src="/Images/seamless connectivity.png" alt="">
+                    <img src="/Images/Pricing page images/Reconciliation.png" alt="">
                     <h1 class="mt-5 font-semibold text-xl lg:text-2xl">Reconciliation</h1>
                     <p class="mt-4 text-lg lg:text-xl  text-slate-700">Always-on and real-time status on money movement.
                     </p>
                 </div>
                 <div class="max-w-md">
-                    <img src="/Images/modular architecture.png" alt="">
+                    <img src="/Images/Pricing page images/Ledger Database.png" alt="">
                     <h1 class="mt-5 font-semibold text-xl lg:text-2xl">Ledger database</h1>
                     <p class="mt-4 text-lg lg:text-xl  text-slate-700">A source of truth for all of money movement.</p>
                 </div>
             </div>
             <div class="flex flex-col justify-center items-start gap-16 mt-16 md:flex-row">
                 <div class="max-w-md">
-                    <img src="/Images/Grade Security.png" alt="">
+                    <img src="/Images/Pricing page images/Integration.png" alt="">
                     <h1 class="mt-5 font-semibold text-xl lg:text-2xl">Integrations & warehouse sync</h1>
                     <p class="mt-4 text-lg lg:text-xl  text-slate-700">Push data to your warehouse and ingest data from
                         other systems.
                     </p>
                 </div>
                 <div class="max-w-md">
-                    <img src="/Images/seamless connectivity.png" alt="">
+                    <img src="/Images/Pricing page images/Unified dashboards.png" alt="">
                     <h1 class="mt-5 font-semibold text-xl lg:text-2xl">Unified dashboards</h1>
                     <p class="mt-4 text-lg lg:text-xl  text-slate-700">A single pane of glass into your cash positions.
                     </p>
                 </div>
                 <div class="max-w-md">
-                    <img src="/Images/modular architecture.png" alt="">
+                    <img src="/Images/Pricing page images/Virtual Accounts.png" alt="">
                     <h1 class="mt-5 font-semibold text-xl lg:text-2xl">Virtual accounts</h1>
                     <p class="mt-4 text-lg lg:text-xl  text-slate-700">Programmatically manage bank accounts.</p>
                 </div>
             </div>
-            <div class="bg-[#C4E0F4] flex flex-col items-center justify-center gap-8 mt-16 px-10 py-16">
-                <h1 class="font-semibold text-3xl sm:text-5xl">Navan</h1>
-                <p class="font-normal text-2xl text-center max-w-5xl">“It became clear to me very quickly that Modern
+            <div class="bg-[#C4E0F4] flex flex-col items-center justify-center gap-8 mt-16 p-4">
+                <h1 class="font-semibold text-2xl sm:text-5xl">Navan</h1>
+                <p class="font-normal text-xl text-center max-w-5xl">“It became clear to me very quickly that Modern
                     Treasury is more than just a technology service. You manage all the
                     operational details and nuances of integrating new banks and payment methods for us to continue
                     improving the core
@@ -383,12 +383,12 @@
         </section>
         <section class="px-10">
             <div class="bg-[#12362E] flex flex-col justify-center items-center gap-8 mt-16 px-10 py-16">
-                <h1 class=" text-3xl text-center text-white sm:text-5xl">Try Modern Treasury and experience the future
+                <h1 class=" text-2xl text-center text-white sm:text-5xl">Try Modern Treasury and experience the future
                     of money movement.</h1>
-                <button
+                <a href="/Contact.html"><button
                     class="mt-4 text-center bg-[#69B894] hidden rounded-md text-xl  text-black font-semibold px-6 py-4 text-nowrap md:block">
                     Talk to us<i class="ml-2 fa-solid fa-arrow-right"></i>
-                </button>
+                </button></a>
             </div>
         </section>
 
