--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div
-        class="bg-black w-full py-1 px-4 flex flex-col justify-center items-center md:flex-row md:justify-end"
+        class="bg-black  w-full py-1 px-4 flex flex-col justify-center items-center md:flex-row md:justify-end"
       >
         <div class="">
           <form action="/search" class="max-w-[400px] w-full">
@@ -46,10 +46,9 @@
             </div>
           </form>
         </div>
-<<<<<<< HEAD
         <button class="rounded-lg px-8 py-1 text-white text-xl">log in</button>
       </div>
-      <div class="flex py-2 px-4 bg-white fixed w-full justify-between">
+      <div class="flex py-2 px-4 bg-white  w-full justify-between">
         <nav class="border-gray-200">
           <div class="container mx-auto flex flex-wrap gap-x-3 items-center">
             <a href="/index.html" class="flex">
@@ -146,62 +145,6 @@
           </button></a
         >
       </div>
-=======
-        <div class="flex my-4 mx-6  justify-between">
-            <nav class="border-gray-200">
-                <div class="container mx-auto flex flex-wrap gap-x-3 items-center">
-                    <a href="/index.html" class="flex">
-                        <img src="/images/modern treasury.png" alt="MODERN TREASURY" width="250px" />
-                    </a>
-                    <button data-collapse-toggle="mobile-menu" type="button"
-                        class="md:hidden ml-3 text-gray-400 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-300 rounded-lg inline-flex items-center justify-center"
-                        aria-controls="mobile-menu-2" aria-expanded="false">
-                        <span class="sr-only">Open main menu</span>
-                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                        <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                    </button>
-                    <div class="hidden md:block w-full md:w-auto" id="mobile-menu">
-                        <ul class="flex-col md:flex-row flex md:space-x-8 mt-4 md:mt-0 md:text-sm md:font-medium">
-                            <li>
-                                <a href="#"
-                                    class="bg-blue-700 text-xl md:bg-transparent text-white block pl-3 pr-4 py-2 md:text-blue-700 md:p-0 rounded focus:outline-none"
-                                    aria-current="page">Platform</a>
-                            </li>
-                            <li>
-                                <a href="#"
-                                    class="text-gray-700 text-xl hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-blue-700 md:p-0">Resources</a>
-                            </li>
-                            <li>
-                                <a href="#"
-                                    class="text-gray-700 text-xl hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-blue-700 md:p-0">Documentation</a>
-                            </li>
-                            <li>
-                                <a href="/pricing.html" 
-                                    class="text-gray-700 text-xl hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-blue-700 md:p-0">Pricing</a>
-                            </li>
-                            <li>
-                                <a href="/contact.html"><button class="bg-blue-600  rounded-md text-lg text-white px-4 py-2 text-nowrap md:hidden">
-                                    Talk to us
-                                </button></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <a href="/contact.html"><button class="bg-blue-600 hidden rounded-md text-lg text-white px-4 py-2 text-nowrap md:block">
-                Talk to us
-            </button></a>
-        </div>
->>>>>>> af566e571e68afa391602cc191fc3c32e2bb517c
     </header>
 
     <main>
@@ -224,7 +167,6 @@
                 biggest payment transformation in decades.
               </p>
             </div>
-<<<<<<< HEAD
           </div>
           <button
             class="bg-purple-600 rounded-md px-4 py-2 text-white text-nowrap"
@@ -259,30 +201,6 @@
               >
                 ->Watch a demo
               </button>
-=======
-            <div class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ...w- h-2"></div>
-            <div class="bg-[#151515] px-10 py-10 flex flex-col justify-between lg:flex-row items-center">
-                <div class=" ">
-                    <h1 class="text-white text-5xl font-semibold max-w-2xl">
-                        Payment Operations Built for the Instant Economy
-                    </h1>
-                    <p class="text-xl max-w-2xl text-slate-400 mt-4">
-                        Build your best business with faster payments, smart workflows,
-                        and real-time visibility, powered by AI.
-                    </p>
-                    <div class="flex gap-x-6 mt-5">
-                        <button class="bg-blue-500 text-nowrap px-5 py-2 text-lg font-medium rounded-md">
-                            Talk to us
-                        </button>
-                        <button class="px-5 py-2 text-nowrap border rounded-md text-blue-500">
-                            ->Watch a demo
-                        </button>
-                    </div>
-                </div>
-                <div>
-                    <img src="/images/earth.png" alt="payment operation" />
-                </div>
->>>>>>> af566e571e68afa391602cc191fc3c32e2bb517c
             </div>
           </div>
           <div>
@@ -333,7 +251,6 @@
                 global banks and rails.
               </p>
             </div>
-<<<<<<< HEAD
             <div class="flex gap-2 mt-4">
               <i
                 class="fa-solid fa-check text-lg lg:text-2xl text-slate-700"
@@ -342,12 +259,6 @@
                 Integrate instant payments (RTP, FedNow) to improve customer
                 experiences and reduce costs.
               </p>
-=======
-            <div class="flex gap-x-4 justify-center mt-16 text-lg lg:text-2xl font-semibold px-10 lg:gap-x-8">
-                <h1 class=" ">Faster Payments</h1>
-                <h1 class=" text-slate-700">Smart Workflows</h1>
-                <p class=" text-slate-700">Real Time-Visibility</p>
->>>>>>> af566e571e68afa391602cc191fc3c32e2bb517c
             </div>
           </div>
         </div>
@@ -667,7 +578,6 @@
               </div>
               <img src="/Images/real time payment.webp" alt="" width="230rem" />
             </div>
-<<<<<<< HEAD
           </div>
         </div>
       </section>
@@ -745,153 +655,6 @@
           <li class="text-slate-400"><a href="">Navan</a></li>
         </ul>
       </div>
-=======
-        </section>
-        <hr>
-        <!-- section 4 -->
-        <section class="mt-36">
-            <div class=" mb-14 px-10  lg:text-left lg:ml-26">
-                <h1 class="mt-5 font-semibold text-center mx-auto text-2xl max-w-3xl lg:text-5xl lg:mx-0">Resources for
-                    Payments and
-                    Product
-                    Leaders Everywhere</h1>
-            </div>
-            <hr>
-            <div class="mt-6  px-8 lg:px-10">
-                <div class="flex flex-wrap justify-center items-center gap-4 mb-16 lg:gap-x-28">
-                    <div class="flex flex-col gap-y-4 gap-x-4 max-w-xl justify-center md:gap-x-10 sm:flex-row">
-                        <div class="">
-                            <p class="text-slate-700 font-medium">Journal</p>
-                            <h1 class="text-slate-800 mt-2 text-xl font-medium max-w-3xl lg:text-2xl">Reconciliation is
-                                a Knapsack Problem</h1>
-                        </div>
-                        <img src="/Images/journal.webp" alt="" width="230rem">
-                    </div>
-                    <div class="flex flex-col gap-y-4  gap-x-4 max-w-xl md:gap-x-10 sm:flex-row">
-                        <div>
-                            <p class="text-slate-700 font-medium">Webinar</p>
-                            <h1 class="text-slate-800 mt-2 text-xl font-medium max-w-3xl lg:text-2xl">Building Resilient
-                                Payment
-                                Systems</h1>
-                        </div>
-                        <img src="/Images/webinar.webp" alt="" width="230rem">
-                    </div>
-                </div>
-                <hr>
-                <div class="flex flex-wrap justify-center items-center gap-4 mt-10 lg:gap-x-28">
-                    <div class="flex flex-col gap-y-4 gap-x-4 max-w-xl md:gap-x-10 sm:flex-row">
-                        <div>
-                            <h1 class="text-slate-800 text-xl font-medium max-w-3xl lg:text-2xl">Tech Talk: Real-Time
-                                Reconciliation</h1>
-                        </div>
-                        <img src="/Images/talk real time.webp" alt="" width="230rem">
-                    </div>
-                    <div class="flex flex-col gap-y-4 gap-x-4 max-w-xl md:gap-x-10 sm:flex-row">
-                        <div>
-                            <h1 class="text-slate-800 text-xl font-medium max-w-3xl lg:text-2xl">Real-Time Payments, A
-                                Generational Shift</h1>
-                        </div>
-                        <img src="/Images/real time payment.webp" alt="" width="230rem">
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="bg-black p-6 mt-20 md:p-12">
-        <div class="flex flex-col gap-y-10  justify-between mb-10 md:flex-row">
-            <div>
-                <p class="text-white text-2xl">Subscribe to Journal updates</p>
-                <p class="text-slate-300 mt-4 text-xl">Discover product features and get primers on the payments
-                    industry.</p>
-            </div>
-            <button class="bg-blue-500 px-10 py-2 text-xl font-medium rounded-lg h-10  ">Subscribe</button>
-        </div>
-        <hr>
-        <div class="p-5 flex flex-col justify-between md:flex-row">
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Products</li>
-                <li class="text-slate-400"><a href="">Payments</a></li>
-                <li class="text-slate-400"><a href="">Ledgers</a></li>
-                <li class="text-slate-400"><a href="">Reconciliation</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Platform</li>
-                <li class="text-slate-400"><a href="">Integration</a></li>
-                <li class="text-slate-400"><a href="">Platform Overview</a></li>
-                <li class="text-slate-400"><a href="">Pricing</a></li>
-                <li class="text-slate-400"><a href="">Security</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Modern Treasury For</li>
-                <li class="text-slate-400"><a href="">Finance</a></li>
-                <li class="text-slate-400"><a href="">Developers</a></li>
-                <li class="text-slate-400"><a href="">Banks</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Case Studies</li>
-                <li class="text-slate-400"><a href="">Customer Stories</a></li>
-                <li class="text-slate-400"><a href="">Procore</a></li>
-                <li class="text-slate-400"><a href="">Alegeus</a></li>
-                <li class="text-slate-400"><a href="">Navan</a></li>
-            </ul>
-        </div>
-
-        <div class="px-5 pb-10 flex flex-col justify-between md:flex-row">
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Insights</li>
-                <li class="text-slate-400"><a href="">Knowledge Hub</a></li>
-                <li class="text-slate-400"><a href="">Journal</a></li>
-                <li class="text-slate-400"><a href="">Learn</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Documentation</li>
-                <li class="text-slate-400"><a href="">AI Quick Strat</a></li>
-                <li class="text-slate-400"><a href="">API Reference</a></li>
-                <li class="text-slate-400"><a href="">Release Notes</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Company</li>
-                <li class="text-slate-400"><a href="">About</a></li>
-                <li class="text-slate-400"><a href="">Newsroom</a></li>
-                <li class="text-slate-400"><a href="">Careers</a></li>
-                <li class="text-slate-400"><a href="">Contact</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Legal</li>
-                <li class="text-slate-400"><a href="">Privacy Policies</a></li>
-                <li class="text-slate-400"><a href="">Terms of Service</a></li>
-            </ul>
-        </div>
-        <hr>
-        <div class="p-10 flex flex-wrap justify-between">
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Popular Guides</li>
-                <li class="text-slate-400"><a href="">ACH Return Code Tool</a></li>
-                <li class="text-slate-400"><a href="">When and How to Set Up an FBO Account</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-slate-400"><a href="">Which bank partner is best for you?</a></li>
-                <li class="text-slate-400"><a href="">How to decode any bank statement</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-white ">Popular Integrations</li>
-                <li class="text-slate-400"><a href="">BMO</a></li>
-                <li class="text-slate-400"><a href="">JP Morgan Chase</a></li>
-                <li class="text-slate-400"><a href="">Cross Rivre</a></li>
-            </ul>
-            <ul class="text-xl leading-10">
-                <li class="text-white "></li>
-                <li class="text-slate-400"><a href="">Wells Fargo</a></li>
-                <li class="text-slate-400"><a href="Goldman Sachs"></a></li>
-            </ul>
-        </div>
-
-    </footer>
-
-    <script src="https://unpkg.com/@themesberg/flowbite@1.1.1/dist/flowbite.bundle.js"></script>
-
-</body>
->>>>>>> af566e571e68afa391602cc191fc3c32e2bb517c
 
       <div class="px-5 pb-10 flex flex-col justify-between md:flex-row">
         <ul class="text-xl leading-10">
