add pricing page

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </div>
             <button class="rounded-lg px-8 py-1 text-white text-xl">log in</button>
         </div>
-        <div class="flex my-4 mx-6 justify-between">
+        <div class="flex my-4 mx-6  justify-between">
             <nav class="border-gray-200">
                 <div class="container mx-auto flex flex-wrap gap-x-3 items-center">
-                    <a href="#" class="flex">
+                    <a href="/index.html" class="flex">
                         <img src="/images/modern treasury.png" alt="MODERN TREASURY" width="250px" />
                     </a>
                     <button data-collapse-toggle="mobile-menu" type="button"
@@ -73,14 +73,20 @@
                                     class="text-gray-700 text-xl hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-blue-700 md:p-0">Documentation</a>
                             </li>
                             <li>
-                                <a href="#"
+                                <a href="/pricing.html" 
                                     class="text-gray-700 text-xl hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-blue-700 md:p-0">Pricing</a>
+                            </li>
+                            <li>
+                                <button
+                                    class="bg-blue-600  rounded-md text-lg text-white px-4 py-2 text-nowrap md:hidden">
+                                    Talk to us
+                                </button>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <button class="bg-blue-600 rounded-md text-lg text-white px-4 py-2 text-nowrap">
+            <button class="bg-blue-600 hidden rounded-md text-lg text-white px-4 py-2 text-nowrap md:block">
                 Talk to us
             </button>
         </div>
@@ -116,10 +122,10 @@
                         and real-time visibility, powered by AI.
                     </p>
                     <div class="flex gap-x-6 mt-5">
-                        <button class="bg-blue-500 px-5 py-2 text-lg font-medium rounded-md">
+                        <button class="bg-blue-500 text-nowrap px-5 py-2 text-lg font-medium rounded-md">
                             Talk to us
                         </button>
-                        <button class="px-5 py-2 border rounded-md text-blue-500">
+                        <button class="px-5 py-2 text-nowrap border rounded-md text-blue-500">
                             ->Watch a demo
                         </button>
                     </div>
@@ -140,7 +146,7 @@
             </div>
             <div class="flex gap-x-4 justify-center mt-16 text-lg lg:text-2xl font-semibold px-10 lg:gap-x-8">
                 <h1 class=" ">Faster Payments</h1>
-                    <h1 class=" text-slate-700">Smart Workflows</h1>
+                <h1 class=" text-slate-700">Smart Workflows</h1>
                 <p class=" text-slate-700">Real Time-Visibility</p>
             </div>
             <div class="flex flex-col items-center  px-6 mt-16 mb-28 mx-10  lg:flex-row bg-slate-200 ">
@@ -306,7 +312,8 @@
         <!-- section 4 -->
         <section class="mt-36">
             <div class=" mb-14 px-10  lg:text-left lg:ml-26">
-                <h1 class="mt-5 font-semibold text-center mx-auto text-2xl max-w-3xl lg:text-5xl lg:mx-0">Resources for Payments and
+                <h1 class="mt-5 font-semibold text-center mx-auto text-2xl max-w-3xl lg:text-5xl lg:mx-0">Resources for
+                    Payments and
                     Product
                     Leaders Everywhere</h1>
             </div>
@@ -316,7 +323,8 @@
                     <div class="flex flex-col gap-y-4 gap-x-4 max-w-xl justify-center md:gap-x-10 sm:flex-row">
                         <div class="">
                             <p class="text-slate-700 font-medium">Journal</p>
-                            <h1 class="text-slate-800 mt-2 text-xl font-medium max-w-3xl lg:text-2xl">Reconciliation is a Knapsack Problem</h1>
+                            <h1 class="text-slate-800 mt-2 text-xl font-medium max-w-3xl lg:text-2xl">Reconciliation is
+                                a Knapsack Problem</h1>
                         </div>
                         <img src="/Images/journal.webp" alt="" width="230rem">
                     </div>
@@ -350,6 +358,99 @@
             </div>
         </section>
     </main>
+    <footer class="bg-black p-6 mt-20 md:p-12">
+        <div class="flex flex-col gap-y-10  justify-between mb-10 md:flex-row">
+            <div>
+                <p class="text-white text-2xl">Subscribe to Journal updates</p>
+                <p class="text-slate-300 mt-4 text-xl">Discover product features and get primers on the payments
+                    industry.</p>
+            </div>
+            <button class="bg-blue-500 px-10 py-2 text-xl font-medium rounded-lg h-10  ">Subscribe</button>
+        </div>
+        <hr>
+        <div class="p-5 flex flex-col justify-between md:flex-row">
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Products</li>
+                <li class="text-slate-400"><a href="">Payments</a></li>
+                <li class="text-slate-400"><a href="">Ledgers</a></li>
+                <li class="text-slate-400"><a href="">Reconciliation</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Platform</li>
+                <li class="text-slate-400"><a href="">Integration</a></li>
+                <li class="text-slate-400"><a href="">Platform Overview</a></li>
+                <li class="text-slate-400"><a href="">Pricing</a></li>
+                <li class="text-slate-400"><a href="">Security</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Modern Treasury For</li>
+                <li class="text-slate-400"><a href="">Finance</a></li>
+                <li class="text-slate-400"><a href="">Developers</a></li>
+                <li class="text-slate-400"><a href="">Banks</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Case Studies</li>
+                <li class="text-slate-400"><a href="">Customer Stories</a></li>
+                <li class="text-slate-400"><a href="">Procore</a></li>
+                <li class="text-slate-400"><a href="">Alegeus</a></li>
+                <li class="text-slate-400"><a href="">Navan</a></li>
+            </ul>
+        </div>
+
+        <div class="px-5 pb-10 flex flex-col justify-between md:flex-row">
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Insights</li>
+                <li class="text-slate-400"><a href="">Knowledge Hub</a></li>
+                <li class="text-slate-400"><a href="">Journal</a></li>
+                <li class="text-slate-400"><a href="">Learn</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Documentation</li>
+                <li class="text-slate-400"><a href="">AI Quick Strat</a></li>
+                <li class="text-slate-400"><a href="">API Reference</a></li>
+                <li class="text-slate-400"><a href="">Release Notes</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Company</li>
+                <li class="text-slate-400"><a href="">About</a></li>
+                <li class="text-slate-400"><a href="">Newsroom</a></li>
+                <li class="text-slate-400"><a href="">Careers</a></li>
+                <li class="text-slate-400"><a href="">Contact</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Legal</li>
+                <li class="text-slate-400"><a href="">Privacy Policies</a></li>
+                <li class="text-slate-400"><a href="">Terms of Service</a></li>
+            </ul>
+        </div>
+        <hr>
+        <div class="p-10 flex flex-wrap justify-between">
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Popular Guides</li>
+                <li class="text-slate-400"><a href="">ACH Return Code Tool</a></li>
+                <li class="text-slate-400"><a href="">When and How to Set Up an FBO Account</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-slate-400"><a href="">Which bank partner is best for you?</a></li>
+                <li class="text-slate-400"><a href="">How to decode any bank statement</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-white ">Popular Integrations</li>
+                <li class="text-slate-400"><a href="">BMO</a></li>
+                <li class="text-slate-400"><a href="">JP Morgan Chase</a></li>
+                <li class="text-slate-400"><a href="">Cross Rivre</a></li>
+            </ul>
+            <ul class="text-xl leading-10">
+                <li class="text-white "></li>
+                <li class="text-slate-400"><a href="">Wells Fargo</a></li>
+                <li class="text-slate-400"><a href="Goldman Sachs"></a></li>
+            </ul>
+        </div>
+
+    </footer>
+
+    <script src="https://unpkg.com/@themesberg/flowbite@1.1.1/dist/flowbite.bundle.js"></script>
+
 </body>
 
 </html>
