--- a/index.html
+++ b/index.html
@@ -77,18 +77,17 @@
                                     class="text-gray-700 text-xl hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-blue-700 md:p-0">Pricing</a>
                             </li>
                             <li>
-                                <button
-                                    class="bg-blue-600  rounded-md text-lg text-white px-4 py-2 text-nowrap md:hidden">
+                                <a href="/contact.html"><button class="bg-blue-600  rounded-md text-lg text-white px-4 py-2 text-nowrap md:hidden">
                                     Talk to us
-                                </button>
+                                </button></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <button class="bg-blue-600 hidden rounded-md text-lg text-white px-4 py-2 text-nowrap md:block">
+            <a href="/contact.html"><button class="bg-blue-600 hidden rounded-md text-lg text-white px-4 py-2 text-nowrap md:block">
                 Talk to us
-            </button>
+            </button></a>
         </div>
     </header>
 
