--- a/pricing.html
+++ b/pricing.html
@@ -88,18 +88,17 @@
                                     class="text-gray-700 text-xl hover:bg-gray-50 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-blue-700 md:p-0">Pricing</a>
                             </li>
                             <li>
-                                <button
-                                    class="bg-blue-600  rounded-md text-lg text-white px-4 py-2 text-nowrap md:hidden">
+                                <a href="/contact.html"><button class="bg-blue-600  rounded-md text-lg text-white px-4 py-2 text-nowrap md:hidden">
                                     Talk to us
-                                </button>
+                                </button></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <button class="bg-blue-600 hidden rounded-md text-lg text-white px-4 py-2 text-nowrap md:block">
+            <a href="/contact.html"><button class="bg-blue-600 hidden rounded-md text-lg text-white px-4 py-2 text-nowrap md:block">
                 Talk to us
-            </button>
+            </button></a>
         </div>
     </header>
     <main>
@@ -109,29 +108,28 @@
             <h1 class=" text-white text-center font-semibold  text-3xl lg:text-7xl">Predictable Pricing, Designed for
                 Scale
             </h1>
-            <button
-                class="mt-4 text-center bg-blue-400  rounded-md text-xl  text-black font-semibold px-6 py-4 text-nowrap">
+            <a href="/contact.html"><button class="mt-4 text-center bg-blue-400  rounded-md text-xl  text-black font-semibold px-6 py-4 text-nowrap">
                 Talk to us<i class="ml-2 fa-solid fa-arrow-right"></i>
-            </button>
+            </button></a>
         </section>
         <!-- section 1 -->
         <section class="px-10 mt-28 ">
             <div class="flex flex-col gap-16 md:flex-row">
                 <div>
                     <img src="/Images/check.png" alt="" class="w-20 h-18">
-                    <h1 class="mt-4 font-medium text-2xl">Upfront, predictable pricing</h1>
+                    <h1 class="mt-4 font-semibold text-2xl">Upfront, predictable pricing</h1>
                     <p class="text-xl font-normal">Know what you’ll pay ahead of time with no consumption-based or
                         per-transaction pricing</p>
                 </div>
                 <div>
                     <img src="/Images/check.png" alt="" class="w-20 h-18">
-                    <h1 class="mt-4 font-medium text-2xl">Fit to your company’s needs</h1>
+                    <h1 class="mt-4 font-semibold text-2xl">Fit to your company’s needs</h1>
                     <p class="text-xl font-normal">Pricing plans based on the elements of our platform that you actually
                         use</p>
                 </div>
                 <div>
                     <img src="/Images/check.png" alt="" class="w-20 h-18">
-                    <h1 class="mt-4 font-medium text-2xl">Competitive at scale</h1>
+                    <h1 class="mt-4 font-semibold text-2xl">Competitive at scale</h1>
                     <p class="text-xl font-normal">Flexible tiers to support rapid company growth and product expansion
                     </p>
                 </div>
@@ -139,10 +137,9 @@
             <div class="bg-[#C4E0F4] flex flex-col justify-center items-center px-10 gap-8 mt-16 py-16">
                 <h1 class="font-semibold text-center text-2xl lg:text-5xl">Comprehensive plans for enterprises</h1>
                 <p class="font-normal text-center text-2xl">Pricing designed for scale.</p>
-                <button
-                    class="mt-4 text-center bg-blue-400  rounded-md text-xl  text-white font-semibold px-6 py-4 text-nowrap">
+                <a href="/contact.html"><button class="mt-4 text-center bg-blue-400  rounded-md text-xl  text-white font-semibold px-6 py-4 text-nowrap">
                     Talk to us<i class="ml-2 fa-solid fa-arrow-right"></i>
-                </button>
+                </button></a>
             </div>
         </section>
         <!-- section 2 -->
